charts/datacenter/xraylab/templates/image-server-dc.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: image-server
spec:
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - image-server
        from:
          kind: ImageStreamTag
          name: image-server:latest
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        name: image-server
    spec:
      containers:
        - name: image-server
          image: image-server:latest
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "2"
              memory: 1G
            requests:
              cpu: 400m
              memory: 100M
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
