charts/datacenter/xraylab/templates/image-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-server
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  selector:
    name: image-server
