charts/datacenter/xraylab/templates/image-server-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: image-server
spec:
  to:
    kind: Service
    name: image-server
    weight: 100
  port:
    targetPort: 5000
  tls:
    termination: edge
  wildcardPolicy: None
