charts/datacenter/xraylab/templates/xray-kafdrop-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kafdrop
spec:
  subdomain: ""
  to:
    kind: Service
    name: kafdrop
    weight: 100
  port:
    targetPort: 9000
  wildcardPolicy: None
